--- a/DentistTransactions/.classpath
+++ b/DentistTransactions/.classpath
@@ -2,5 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="src/jar_files/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="src/jar_files/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="src/jar_files/miglayout15-swing.jar"/>
+	<classpathentry kind="lib" path="src/jar_files/mysql-connector-java-5.1.39-bin.jar"/>
+	<classpathentry kind="lib" path="src/jar_files/rs2xml.jar"/>
+	<classpathentry kind="lib" path="src/jar_files/swingx-all-1.6.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
